--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convolutional Neural Network"
+    "# Convolutional Neural Network\n",
+    "\n",
+    "***Dapeng Shang, BU Questrom***"
    ]
   },
   {
