--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Generative Adversarial Networks (GANs)"
+        "# Generative Adversarial Networks (GANs)\n",
+        "\n",
+        "***Dapeng Shang, BU Questrom***"
       ]
     },
     {
