--- a/Linear Model.ipynb
+++ b/Linear Model.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Neural Networks "
+    "# Linear Neural Networks \n",
+    "\n",
+    "***Dapeng Shang, BU Questrom***"
    ]
   },
   {
