--- a/Sequential Model.ipynb
+++ b/Sequential Model.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sequential Model (RNN, LSTM)"
+    "# Sequential Model (RNN, LSTM)\n",
+    "\n",
+    "***Dapeng Shang, BU Questrom***"
    ]
   },
   {
