--- a/RNN Classifier.ipynb
+++ b/RNN Classifier.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RNN Classifier"
+    "# RNN Classifier\n",
+    "\n",
+    "***Dapeng Shang, BU Questrom***"
    ]
   },
   {
